hint and text color change for all input facebook login fix unwanted data send remove from father, mother, sister, brother and others

--- a/app/src/main/res/layout/activity_facebook_registration_data_input.xml
+++ b/app/src/main/res/layout/activity_facebook_registration_data_input.xml
@@ -76,7 +76,7 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="ডিসপ্লে নাম"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:inputType="text"
                 android:paddingLeft="10sp"
@@ -92,7 +92,7 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="জন্ম তারিখ"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionDone"
                 android:inputType="text"
