--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -87,7 +87,7 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="ইমেইল"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
@@ -103,7 +103,7 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="পাসওয়ার্ড (ন্যূনতম ৪ অক্ষর)"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="text"
@@ -120,7 +120,7 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="নাম"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="text"
@@ -137,7 +137,7 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="ডিসপ্লে নাম"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:inputType="text"
                 android:paddingLeft="10sp"
@@ -153,7 +153,7 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="জন্ম তারিখ"
-                android:textColor="@color/lblFromName"
+                android:textColor="@color/black"
                 android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionDone"
                 android:inputType="text"
