--- a/app/src/main/res/layout/sister.xml
+++ b/app/src/main/res/layout/sister.xml
@@ -38,8 +38,8 @@
         android:hint="  নাম*"
         android:padding="10dp"
         android:singleLine="true"
-        android:textColor="@color/lblFromName"
-        android:textColorHint="@color/lblFromName" />
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName"/>
 
     <LinearLayout
         android:id="@+id/age_sister"
@@ -60,8 +60,10 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="বয়স*"
-            android:textSize="18dp" />
+            android:hint="বয়স*"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName"/>
 
         <ImageView
             android:id="@+id/down_arrow_age_sister"
@@ -94,8 +96,10 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="পেশা*"
-            android:textSize="18dp" />
+            android:hint="পেশা*"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName"/>
 
         <ImageView
             android:id="@+id/down_arrow_profession_father"
@@ -128,8 +132,10 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
-            android:textSize="18dp" />
+            android:hint="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName"/>
 
         <ImageView
             android:id="@+id/down_arrow_profession_group_sister"
@@ -154,8 +160,8 @@
         android:hint="পদবী"
         android:padding="10dp"
         android:singleLine="true"
-        android:textColor="@color/lblFromName"
-        android:textColorHint="@color/lblFromName" />
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName"/>
 
     <EditText
         android:id="@+id/institution_sister"
@@ -168,8 +174,8 @@
         android:hint="প্রতিষ্ঠান"
         android:padding="10dp"
         android:singleLine="true"
-        android:textColor="@color/lblFromName"
-        android:textColorHint="@color/lblFromName" />
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName"/>
 
 
     <LinearLayout
@@ -191,8 +197,10 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="বৈবাহিক অবস্থা"
-            android:textSize="18dp" />
+            android:hint="বৈবাহিক অবস্থা"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName"/>
 
         <ImageView
             android:id="@+id/down_arrow_marital_sister"
