--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="bg_msg_input">#e8e8e8</color>
     <color name="text_msg_input">#626262</color>
     <color name="lblFromName">#777777</color>
-
+    <color name="black">#000000</color>
 
     <color name="tab_background_selected">#FFBF2124</color>
     <color name="tab_background_unselected">#FFAEACAC</color>
